[package]
name = "a"
version = "0.1.0"
authors = ["Mattia Rossi <mattia.rossi@criptalia.it>"]
edition = "2018"

[dependencies]
quicksilver = { version = "^0.3.18", default-features = false, features = ["fonts", "saving"]}
env_logger = "*"
log = "0.4"
rand = "*"
stdweb = { version = "*", optional = true }
